--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 DATABASE = "mongodb+srv://shrikhandesakshi:gCREagnrzuQ3nj5a@cluster0.zjqwmvo.mongodb.net/?retryWrites=true&w=majority"
-SECRET_KEY=pradipta
+SECRET_KEY=sakshi
