--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
-<<<<<<< HEAD
-DATABASE = "mongodb+srv://pradiptamandal789:hinuOqvUDk6xSreW@cluster0.yn6furs.mongodb.net/?retryWrites=true&w=majority"
+# <<<<<<< HEAD
+# DATABASE = "mongodb+srv://pradiptamandal789:hinuOqvUDk6xSreW@cluster0.yn6furs.mongodb.net/?retryWrites=true&w=majority"
+# SECRET_KEY=pradipta
+# =======
+DATABASE = "mongodb+srv://videoSharingplatform:videoSharingplatform@cluster0.quxjoug.mongodb.net/?retryWrites=true&w=majority"
 SECRET_KEY=pradipta
-=======
